Fix vertical alignment

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@
 body {
   background-color: var(--bg);
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 body * {
@@ -36,8 +40,9 @@ body * {
 
 #container {
   width: 100%;
+  min-height: 90vh;
   max-width: 588px;
-  margin: 56px auto 0px;
+  margin: 0px auto;
   padding: 0 24px;
 }
 
